--- a/homework.html
+++ b/homework.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+     <style>
+    a{text-decoration: none;}
+    </style>
   </head>
 <body>
   <div class="wrapper">
